Bug 142053 - Guidelines: Tab affordance is not needed when single window frame is available.
Summary: Guidelines: Tab affordance is not needed when single window frame is available.
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.12.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-22 14:08 UTC by Celeste Lyn Paul
Modified: 2007-10-12 23:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
avdeviceconfig.diff (1.93 KB, patch)
2007-10-07 18:08 UTC, Dennis Nienhüser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Celeste Lyn Paul 2007-02-22 14:08:29 UTC
Version:           0.12.3 (using KDE KDE 3.5.5)
Installed from:    Ubuntu Packages
OS:                Linux

This is a minor interface issue which was found during a general guidelines check of the KDE UI.

In Configuration under the Devices page, Video option (the only frame) is displayed in a tab.  It should not be in a tab, but a frame.

Only use tabs when there are multiple frames.  When there is a single frame, use the general window frame such as in Accounts or Identity.  If more options are installed or added under Devices, then you can use tabs to separate the frames.
Comment 1 Matt Rogers 2007-02-22 14:11:06 UTC
I hadn't even noticed. Thanks for reporting!
Comment 2 Dennis Nienhüser 2007-10-07 18:08:40 UTC
Created attachment 21771 [details]
avdeviceconfig.diff

Patch removes (comments) the tab widget.
Comment 3 Matt Rogers 2007-10-11 03:36:28 UTC
SVN commit 723898 by mattr:

Fix bug 142053

Commit the patch from Dennis Nienh?\252ser to remove the tab widget
from the video configuration.

Thanks for the patch!
CCMAIL: earthwings@gentoo.org
BUG: 142053


 M  +6 -6      avdeviceconfig.cpp  
 M  +1 -1      avdeviceconfig.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=723898
Comment 4 Dennis Nienhüser 2007-10-12 23:34:49 UTC
SVN commit 724633 by nienhueser:

Same for the tab widget in the chat window configuration (got it's own item in kde 4)
CCBUG: 142053


 M  +5 -14     chatwindowconfig.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=724633