Fix bug 142053

Commit the patch from Dennis Nienhüser to remove the tab widget
from the video configuration.

Thanks for the patch!
CCMAIL: earthwings@gentoo.org
BUG: 142053

svn path=/trunk/KDE/kdenetwork/kopete/; revision=723898